feat: add forgot password function and mailer
